# another-messenger

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: dialerwindow.cpp  dialerwindow.h  main.cpp  main.rs  mpsc_evented.rs  voip_callbacks.rs
